...
    case mirror = 1
    case photo = 2

    var displayName: String {
        switch self {
        case .none: return "None"
        case .mirror: return "Mirror"
        case .photo: return "Photo"
        }
    }
}

class SpiralSettings: ObservableObject {
...
